# my-website

./: README.md  package.json
backend/: app.py  blog1.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: Emoji.js  SocialFollow.js
src/: App.js  Content.js  SocialFollow.js  style.css
